--- a/app/views/public/genres/show.html.erb
+++ b/app/views/public/genres/show.html.erb
@@ -1,19 +1,54 @@
-<div>
-  <%= render 'genre', genres: @genres %>
-　 <div>
-    <h5><%= @genre.name %>一覧（全<%= @genre.posts.count %>件）</h5>
-    <div>
-       <% @posts.each do |post| %>
-         <div>
-           <%= link_to post_path(post.id) do %>
-             <%= image_tag post.get_image, width: 100, height: 100 %><br>
-             <%= post.title %><br>
-           <% end %>
-         </div>
-       <% end %>
-    </div>
-   </div>
+<div class="row my-5">
+  <h2 class="col-12 text-center"><%= @genre.name %>一覧（全<%= @genre.posts.count %>件）</h2>
 </div>
-<div class="d-flex justify-content-center">
-  <%= paginate @genres %>
+
+<div class="row">
+  <div class="genre_search">
+    <div class="col-4">
+      <%= render 'genre', genres: @genres %>
+    </div>
+  </div>
+  <div class="col-8 justify-content-start">
+    <ul class="nav justify-content-center mb-2">
+      <li class="nav-item mr-1">
+        <%= link_to '新しい順', genre_path(latest: "true"), class:"btn btn-outline-dark #{'active' if params[:latest]}" %>
+      </li>
+      <li class="nav-item mr-1">
+        <%= link_to '古い順', genre_path(old: "true"), class:"btn btn-outline-dark #{'active' if params[:old]}" %>
+      </li>
+      <li class="nav-item mr-1">
+        <%= link_to '評価の高い順', genre_path(star_count_many: "true"), class:"btn btn-outline-dark #{'active' if params[:star_count_many]}" %>
+      </li>
+      <li class="nav-item mr-1">
+        <%= link_to '評価の低い順', genre_path(star_count_few: "true"), class:"btn btn-outline-dark #{'active' if params[:star_count_few]}" %>
+      </li>
+    </ul>
+    <div class="mb-3 mx-auto" style="max-width: 600px; ">
+      <div class="row no-gutters">
+        <% if !@posts.empty? %>
+          <% @posts.each do |post| %>
+            <div class="card col-12" style="margin-bottom: 10px;">
+              <div class="row">
+                <div class="col-3 m-auto" style="padding-left: 40px;">
+                  <%= link_to image_tag(post.user.get_profile_image, width: 100, height: 100, class: 'rounded-circle'), user_mypage_path(post.user) %>
+                </div>
+                <div class="col-9">
+                  <div class="card-body">
+                    <h5 class="card-title"><%= link_to post.title, post_path(post.id) %></h5>
+                    <p class="card-text"><%= post.created_at.strftime("%Y年%m月%d日") %>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <% end %>
+      </div>
+    </div>
+
+    <div class="d-flex justify-content-center">
+      <%= paginate @posts %>
+    </div>
+    <% else %>
+    まだ投稿がありません
+    <% end %>
+  </div>
 </div>
