--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -10,8 +10,8 @@
       </div>
       <div class="form-row">
         <div class="form-group col-6">
-      　　<h4>型式</h4>
-      　　<%= f.text_field :product_name, class:"form-control form-control-sm" %>
+          <h4>型式</h4>
+          <%= f.text_field :product_name, class:"form-control form-control-sm" %>
         </div>
         <div class="form-group col-6">
           <h4>ジャンル</h4>
@@ -45,7 +45,7 @@
       </div>
       <div class="form-group">
         <h4>紹介文</h4>
-        <%= f.text_area :introduction, class:"form-control form-control-lg" %>
+        <%= f.text_area :introduction, class:"form-control custom-text-area" %>
       </div>
       <div class="form-group text-center">
         <%= f.submit '　投　稿　', class: "btn btn-primary" %>
